--- a/introduction.tex
+++ b/introduction.tex
@@ -58,7 +58,7 @@ One possible way to overcome the execution of trusted and malicious code with th
 
 \section{Problem statement}\label{intro:problem}
 Based on our belief that virtualisation technology will increasingly take over traditional systems, starting from internet services and desktop computing to mobile devices, we examine the possibility of using the new technology to solve issues that are closer to the security world rather than energy and space optimization.
-Here, we briefly discuss the different types of attacks that security researchers have been responding to thus far and for which we provide security mitigations. Although the research community has responded quite actively with many solutions that use different technologies, far greater effort should be dedicated to incorporating these solutions for production systems.
+Here, we briefly discuss the different types of attacks that security researchers have been responding to thus far and for which we provide security mitigations. Although the research community has responded quite actively with many solutions that use different technologies, far greater effort should be dedicated to incorporating these solutions for production systems. Despite the aforementioned solutions, kernel attacks are still common and effective against the protection mechanisms that are usually in place in commodity operating systems. On the other side, considerable usage of the web browser in modern digital life is making its architecture more complicated, increasing the chances of discovering vulnerabilities that might be exploited.
 In the course of this thesis we provide security mitigations for two kinds of attacks: attacks that compromise operating system kernels and attacks through modern web browsers and applications delivered on demand.  
 
 
